--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "slugify": "^1.4.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
