--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,13 @@
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "chokidar-cli": "^2.1.0",
+    "history": "^5.0.0",
+    "js-cookie": "^2.2.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
