--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "chokidar-cli": "^2.1.0",
+    "chroma-js": "^2.1.0",
     "history": "^5.0.0",
     "js-cookie": "^2.2.1",
     "npm-run-all": "^4.1.5",
