--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "chroma-js": "^2.1.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "inkjet": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-vibrant": "^3.2.1-alpha.1",
+    "png-js": "^1.0.0",
     "slugify": "^1.4.6",
     "uuid": "^8.3.2"
   },
