--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Austin Reynaud",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.856.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "chroma-js": "^2.1.1",
@@ -20,6 +21,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-mongo-sanitize": "^2.0.2",
